src/main/java/com/example/connection/error/ApiErrorMessage.java
package com.example.connection.error;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@NoArgsConstructor
@AllArgsConstructor
@Data
public class ApiErrorMessage {
    private String massage;
}
